packages/related/test/tests/test_plan_execution/logs/snapshots/browser/error_in_script.spec.html.txt
------------ 3 executions to run ------------
1 with chromium (chromium@120.0.6099.28)
1 with firefox (firefox@119.0)
1 with webkit (webkit@17.4)
---------------------------------------------

✖ error_in_script.spec.html [chromium/<mock>/<mock>] 1/3 (1 failed, 2 remaining)
--------------- error ----------------
9  |   <body>
10 |     <script>
11 |       throw new Error("here");
                      ^
Error: here
  at <mock>/error_in_script.spec.html:11:18
--------------------------------------
✖ error_in_script.spec.html [firefox/<mock>] 2/3 (2 failed, 1 remaining)
--------------- error ----------------
9  |   <body>
10 |     <script>
11 |       throw new Error("here");
                      ^
Error: here
@<mock>/error_in_script.spec.html:11:18
--------------------------------------
✖ error_in_script.spec.html [webkit/<mock>] 3/3 (all failed)
--------------- error ----------------
9  |   <body>
10 |     <script>
11 |       throw new Error("here");
                               ^
Error: here
global code@<mock>/error_in_script.spec.html:11:27
--------------------------------------

------------------ summary ------------------
3 executions: all failed
duration: <mock>
---------------------------------------------